DO NOT MERGE WiMAX settings menu
1. Show the 4G menu.
2. Show the 4G MAC address
3. Execute 4G setting apk.

Change-Id: Id9d5551e5bfdb7d79279de42b36ec0ebccdf6099
Signed-off-by: TK MUN <tk.mun@samsung.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,8 @@
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_WIMAX_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIMAX_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -85,6 +87,19 @@
 
 
         <!-- Top-level settings -->
+
+        <activity android:name=".wimax.WimaxSettings" android:label="@string/wimax_settings"
+                android:clearTaskOnLaunch="true"
+                >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.settings.WIMAX_SETTINGS" />
+                <action android:name="android.net.wimax.PICK_WIMAX_NETWORK" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE_LAUNCH" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".wifi.WifiSettings"
                 android:label="@string/wifi_settings"
